[ios] Correct content suggestions safe area on rotation.

Various safe area tweaks to correct the layout of fakebox on rotation
when presented under another view controller.

Bug: 866864, 862208
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I7fda5c1ae564825c203566add4c7e738bcb38eb8
Reviewed-on: https://chromium-review.googlesource.com/1149100
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577826}
Former-commit-id: bfa5b989cbdee6924959baae352df25c7655eed1